--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
 		"autoprefixer": "^10.4.8",
 		"postcss": "^8.4.16",
 		"prettier": "^2.7.1",
+		"prettier-plugin-svelte": "^2.7.0",
+		"prettier-plugin-tailwindcss": "^0.1.13",
 		"svelte": "^3.49.0",
 		"svelte-check": "^2.8.0",
 		"svelte-preprocess": "^4.10.7",
