--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
 	"devDependencies": {
 		"@sveltejs/vite-plugin-svelte": "^1.0.1",
 		"@tsconfig/svelte": "^3.0.0",
+		"@types/lodash-es": "^4.17.6",
 		"autoprefixer": "^10.4.8",
 		"postcss": "^8.4.16",
 		"prettier": "^2.7.1",
@@ -24,5 +25,8 @@
 		"tslib": "^2.4.0",
 		"typescript": "^4.6.4",
 		"vite": "^3.0.7"
+	},
+	"dependencies": {
+		"lodash-es": "^4.17.21"
 	}
 }
